--- a/css/style.css
+++ b/css/style.css
@@ -874,7 +874,13 @@ a.icon img.icons {
     flex-direction: column;
     margin-left: 20px;
 }
-
+@media (max-width: 767px) {
+    
+.Team-Members .container .box07 .cont .icon {
+    margin-left: 8px;
+}
+    
+}
 .Team-Members .container .box07 .cont .icon img {
     width: 15px;
     margin-top: 30px;
@@ -1196,7 +1202,7 @@ a.icon img.icons {
     display: flex;
     align-items: center;
     margin: 20px auto;
-    gap: 10px;
+    gap: 5px;
     justify-content: center;
 }
 
